--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "353333d0-67f3-4170-99b8-4568b125ffe9",
+   "id": "3e18c962-196d-4ebc-9d71-4eafa5547c7e",
    "metadata": {},
    "source": [
-    "![lop](../images/logo_diive1_128px.png)\n",
+    "![lop](../../images/logo_diive1_128px.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8acb6cf-1ff1-4621-bcc1-4995cb6ecee6",
+   "metadata": {},
+   "source": [
     "<span style='font-size:40px; display:block;'>\n",
     "<b>\n",
     "    Overview of Notebooks\n",
     "</b>\n",
-    "</span>\n",
-    "\n",
-    "**Last updated**: 16 Sep 2023  \n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24336649-58a4-452d-ac0b-b7ebc7b29450",
+   "metadata": {},
+   "source": [
     "---\n",
+    "**Last updated:**: 24 Oct 2023  \n",
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
   },
