--- a/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d3a0ccc-6968-4fcd-b779-2b012931f687",
+   "id": "46b13a03-ffb5-4c80-9834-6ecdac95b7ac",
    "metadata": {},
    "source": [
-    "![lop](../../images/logo_diive1_128px.png)\n",
-    "# **Read Data From Multiple ICOS BM Files (1-row header)**\n",
-    "\n",
-    "**Notebook creation date**: 23 Apr 2023  \n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "![lop](../../images/logo_diive1_128px.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07292e66-001a-42e5-a6fe-9e97a3f9bbd6",
+   "metadata": {},
+   "source": [
+    "<span style='font-size:32px; display:block;'>\n",
+    "<b>\n",
+    "    Read Data From Multiple ICOS BM Files (1-row header)\n",
+    "</b>\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62271017-b93f-4fb3-84ac-adea280c8656",
+   "metadata": {},
+   "source": [
     "---\n",
-    "Example notebook for reading ICOS data files with the time series processing library `diive`."
+    "**Notebook version**: `1` (23 Apr 2023)  \n",
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch) "
    ]
   },
   {
