--- a/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d3a0ccc-6968-4fcd-b779-2b012931f687",
+   "id": "e9915ee0-ba95-49ea-b938-7fc9f334bf18",
    "metadata": {},
    "source": [
-    "![lop](../../images/logo_diive1_128px.png)\n",
-    "# **Read Data From Multiple ICOS BM Files**\n",
-    "\n",
-    "**Notebook creation date**: 23 Apr 2023  \n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "![lop](../../images/logo_diive1_128px.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "999e8e16-3eeb-4e3a-9926-522476f2b7c6",
+   "metadata": {},
+   "source": [
+    "<span style='font-size:32px; display:block;'>\n",
+    "<b>\n",
+    "    Read Data From Multiple ICOS BM Files\n",
+    "</b>\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd05ee0-abd5-4c9f-9ce8-aefaeb1ea697",
+   "metadata": {},
+   "source": [
     "---\n",
-    "Example notebook for reading ICOS data files with the time series processing library `diive`."
+    "**Notebook version**: `1` (23 Apr 2023)  \n",
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch) "
    ]
   },
   {
