--- a/notebooks/Stats/TimeSeriesStats.ipynb
+++ b/notebooks/Stats/TimeSeriesStats.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb3e16ae-6cee-4c20-94b6-0294f5fcd0d9",
+   "id": "05809b8e-4567-43a4-9b50-92bc3ed6aa15",
    "metadata": {},
    "source": [
-    "![lop](../../images/logo_diive1_128px.png)\n",
-    "# **Calculate stats for time series**\n",
-    "\n",
-    "**Last updated**: 17 Jun 2023\n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "![lop](../../images/logo_diive1_128px.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c251a88-3199-4d5a-8437-7f3b37bbc459",
+   "metadata": {},
+   "source": [
+    "<span style='font-size:40px; display:block;'>\n",
+    "<b>\n",
+    "    Calculate stats for time series\n",
+    "</b>\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe5ad7e-7ca1-410d-97c4-3683a11a67d2",
+   "metadata": {},
+   "source": [
     "---\n",
-    "Example for function `core.dfun.stats.sstats`of the time series processing library `diive`."
+    "**Notebook version**: `1` (25 Oct 2023)  \n",
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch) "
    ]
   },
   {
@@ -24,27 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:38.579091Z",
-     "end_time": "2023-06-17T16:39:40.576737Z"
-    }
+     "end_time": "2023-06-17T16:39:40.576737Z",
+     "start_time": "2023-06-17T16:39:38.579091Z"
+    },
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\holukas\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-7H5NxUqg-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import Int64Index as NumericIndex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from diive.configs.exampledata import load_exampledata_DIIVE_CSV_30MIN\n",
+    "from diive.configs.exampledata import load_exampledata_parquet\n",
     "from diive.core.dfun.stats import sstats"
    ]
   },
@@ -58,34 +65,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:40.578733Z",
-     "end_time": "2023-06-17T16:39:40.720354Z"
-    }
+     "end_time": "2023-06-17T16:39:40.720354Z",
+     "start_time": "2023-06-17T16:39:40.578733Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file exampledata_CH-DAV_FP2022.5_2022.07_ID20230206154316_30MIN.diive.csv ...\n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.049 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
      ]
     },
     {
      "data": {
-      "text/plain": "TIMESTAMP_MIDDLE\n2022-07-01 00:15:00         NaN\n2022-07-01 00:45:00         NaN\n2022-07-01 01:15:00    1.304188\n2022-07-01 01:45:00         NaN\n2022-07-01 02:15:00         NaN\n                         ...   \n2022-07-31 21:45:00         NaN\n2022-07-31 22:15:00         NaN\n2022-07-31 22:45:00         NaN\n2022-07-31 23:15:00         NaN\n2022-07-31 23:45:00         NaN\nFreq: 30T, Name: NEE_CUT_REF_orig, Length: 1488, dtype: float64"
+      "text/plain": [
+       "TIMESTAMP_MIDDLE\n",
+       "2013-01-01 00:15:00         NaN\n",
+       "2013-01-01 00:45:00         NaN\n",
+       "2013-01-01 01:15:00         NaN\n",
+       "2013-01-01 01:45:00    0.537565\n",
+       "2013-01-01 02:15:00         NaN\n",
+       "                         ...   \n",
+       "2022-12-31 21:45:00         NaN\n",
+       "2022-12-31 22:15:00    3.517950\n",
+       "2022-12-31 22:45:00         NaN\n",
+       "2022-12-31 23:15:00         NaN\n",
+       "2022-12-31 23:45:00         NaN\n",
+       "Freq: 30T, Name: NEE_CUT_REF_orig, Length: 175296, dtype: float64"
+      ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_df, metadata_df = load_exampledata_DIIVE_CSV_30MIN()\n",
+    "data_df = load_exampledata_parquet()\n",
     "series = data_df['NEE_CUT_REF_orig']\n",
     "series"
    ]
@@ -95,19 +116,19 @@
    "id": "d1b83405-0274-4587-a6ba-0f29f2b30742",
    "metadata": {},
    "source": [
-    "# Find gaps in time series"
+    "# Calculate time series stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0783bda1-e410-42f0-a4c6-be64000852e9",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:40.720354Z",
-     "end_time": "2023-06-17T16:39:40.753265Z"
-    }
+     "end_time": "2023-06-17T16:39:40.753265Z",
+     "start_time": "2023-06-17T16:39:40.720354Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -124,22 +145,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "c90d528e-9415-46d4-9eea-030c265e65f3",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:40.736311Z",
-     "end_time": "2023-06-17T16:39:40.772215Z"
-    }
+     "end_time": "2023-06-17T16:39:40.772215Z",
+     "start_time": "2023-06-17T16:39:40.736311Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "              NEE_CUT_REF_orig\nSTARTDATE     2022-07-01 00:15\nENDDATE       2022-07-31 23:45\nPERIOD        30 days 23:30:00\nNOV                        718\nMISSING                    770\nMISSING_PERC         51.747312\nMEAN                 -4.845385\nSD                    5.904654\nVAR                  34.864943\nSD/MEAN              -1.218614\nMAD                   4.502689\nSUM               -3478.986584\nMEDIAN               -5.516215\nMIN                  -22.40709\nMAX                   15.83389\nP05                 -13.928686\nP25                  -8.364355\nP75                  -1.874598\nP95                   6.186969",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NEE_CUT_REF_orig</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>STARTDATE</th>\n      <td>2022-07-01 00:15</td>\n    </tr>\n    <tr>\n      <th>ENDDATE</th>\n      <td>2022-07-31 23:45</td>\n    </tr>\n    <tr>\n      <th>PERIOD</th>\n      <td>30 days 23:30:00</td>\n    </tr>\n    <tr>\n      <th>NOV</th>\n      <td>718</td>\n    </tr>\n    <tr>\n      <th>MISSING</th>\n      <td>770</td>\n    </tr>\n    <tr>\n      <th>MISSING_PERC</th>\n      <td>51.747312</td>\n    </tr>\n    <tr>\n      <th>MEAN</th>\n      <td>-4.845385</td>\n    </tr>\n    <tr>\n      <th>SD</th>\n      <td>5.904654</td>\n    </tr>\n    <tr>\n      <th>VAR</th>\n      <td>34.864943</td>\n    </tr>\n    <tr>\n      <th>SD/MEAN</th>\n      <td>-1.218614</td>\n    </tr>\n    <tr>\n      <th>MAD</th>\n      <td>4.502689</td>\n    </tr>\n    <tr>\n      <th>SUM</th>\n      <td>-3478.986584</td>\n    </tr>\n    <tr>\n      <th>MEDIAN</th>\n      <td>-5.516215</td>\n    </tr>\n    <tr>\n      <th>MIN</th>\n      <td>-22.40709</td>\n    </tr>\n    <tr>\n      <th>MAX</th>\n      <td>15.83389</td>\n    </tr>\n    <tr>\n      <th>P05</th>\n      <td>-13.928686</td>\n    </tr>\n    <tr>\n      <th>P25</th>\n      <td>-8.364355</td>\n    </tr>\n    <tr>\n      <th>P75</th>\n      <td>-1.874598</td>\n    </tr>\n    <tr>\n      <th>P95</th>\n      <td>6.186969</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NEE_CUT_REF_orig</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STARTDATE</th>\n",
+       "      <td>2013-01-01 00:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENDDATE</th>\n",
+       "      <td>2022-12-31 23:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PERIOD</th>\n",
+       "      <td>3651 days 23:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NOV</th>\n",
+       "      <td>58197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MISSING</th>\n",
+       "      <td>117099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MISSING_PERC</th>\n",
+       "      <td>66.800726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEAN</th>\n",
+       "      <td>-3.653026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SD</th>\n",
+       "      <td>6.249538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VAR</th>\n",
+       "      <td>39.056725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SD/MEAN</th>\n",
+       "      <td>-1.710784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SUM</th>\n",
+       "      <td>-212595.178903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEDIAN</th>\n",
+       "      <td>-3.18039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MIN</th>\n",
+       "      <td>-40.81112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAX</th>\n",
+       "      <td>25.290227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P01</th>\n",
+       "      <td>-20.550344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P05</th>\n",
+       "      <td>-14.229386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P25</th>\n",
+       "      <td>-7.556164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P75</th>\n",
+       "      <td>0.630461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P95</th>\n",
+       "      <td>5.510475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P99</th>\n",
+       "      <td>10.946673</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                NEE_CUT_REF_orig\n",
+       "STARTDATE       2013-01-01 00:15\n",
+       "ENDDATE         2022-12-31 23:45\n",
+       "PERIOD        3651 days 23:30:00\n",
+       "NOV                        58197\n",
+       "MISSING                   117099\n",
+       "MISSING_PERC           66.800726\n",
+       "MEAN                   -3.653026\n",
+       "SD                      6.249538\n",
+       "VAR                    39.056725\n",
+       "SD/MEAN                -1.710784\n",
+       "SUM               -212595.178903\n",
+       "MEDIAN                  -3.18039\n",
+       "MIN                    -40.81112\n",
+       "MAX                    25.290227\n",
+       "P01                   -20.550344\n",
+       "P05                   -14.229386\n",
+       "P25                    -7.556164\n",
+       "P75                     0.630461\n",
+       "P95                     5.510475\n",
+       "P99                    10.946673"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,21 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "52d47c35-eda2-4bb5-9b2b-1faedb4fb43c",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:40.753265Z",
-     "end_time": "2023-06-17T16:39:40.772215Z"
-    }
+     "end_time": "2023-06-17T16:39:40.772215Z",
+     "start_time": "2023-06-17T16:39:40.753265Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2023-06-17 16:39:40\n"
+      "Finished 2023-10-25 14:55:39\n"
      ]
     }
    ],
@@ -191,8 +340,8 @@
    "id": "b9900f7d-1bd3-4aa3-bd9a-33a8e3557678",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-17T16:39:40.768226Z",
-     "end_time": "2023-06-17T16:39:40.811110Z"
+     "end_time": "2023-06-17T16:39:40.811110Z",
+     "start_time": "2023-06-17T16:39:40.768226Z"
     }
    },
    "outputs": [],
