harmonize daytime/nighttime flag calculation

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 24 Oct 2023  \n",
+    "**Last updated:**: 31 Oct 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -77,7 +77,8 @@
    "id": "400a5e8c-adb7-4f8f-856a-4f8da965948f",
    "metadata": {},
    "source": [
-    "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)"
+    "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)\n",
+    "- [Calculate daytime flag, nighttime flag and potential radiation from latitude and longitude ](CalculateVariable/Daytime_and_nighttime_flag.ipynb)"
    ]
   },
   {
@@ -156,7 +157,8 @@
    "id": "e3344d3b-0d72-4915-a84e-45b5eec3c7b6",
    "metadata": {},
    "source": [
-    "- [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): Quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)"
+    "- [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): CO2 flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
+    "- [See here for an example using N2O flux](Workbench/FLUXNET_CH4-N2O_Committee_WP2/FluxProcessingChain.ipynb)"
    ]
   },
   {
@@ -199,12 +201,37 @@
    "id": "cd147261-d558-4bf1-adf8-b0d6b6c26553",
    "metadata": {},
    "source": [
-    "# **Plotting**"
+    "# **QA/QC - Data Quality Checks, Corrections and Flags**"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "db13d0fc-6ee4-4bec-a768-d5464513b0d6",
+   "metadata": {},
+   "source": [
+    "- [Step-wise quality screening of meteo data from database](MeteoScreening/StepwiseMeteoScreeningFromDatabase.ipynb): Example of how `diive` is used to quality-screen meteorological data using a direct connection to a database. In this case, the database used is [InfluxDB](https://www.influxdata.com/).\n",
+    "- Flux quality-screening is part of the Flux Processing Chain (see above)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbc8e90-dc12-4bc1-a4d6-88659496506e",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c23ce8b-44db-405a-9278-7aca5b13dc25",
+   "metadata": {},
+   "source": [
+    "# **Plotting**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
