Added normalized plot

--- a/notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/FCH4vsUSTAR.ipynb
+++ b/notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/FCH4vsUSTAR.ipynb
@@ -143,7 +143,7 @@
    "id": "8c8ba0b8-2aee-4756-86bc-e785b7c94657",
    "metadata": {},
    "source": [
-    "# Plotting function"
+    "# Plotting function (with bins)"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "id": "a44f2c5c-4460-4ad6-8a48-e933eda6b2dc",
    "metadata": {},
    "source": [
-    "# Create plots"
+    "# Create plots (with bins)"
    ]
   },
   {
