Added quick flux processing chain

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 31 Oct 2023  \n",
+    "**Last updated:**: 9 Jan 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -157,8 +157,9 @@
    "id": "e3344d3b-0d72-4915-a84e-45b5eec3c7b6",
    "metadata": {},
    "source": [
-    "- [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): CO2 flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
-    "- [See here for an example using N2O flux](Workbench/FLUXNET_CH4-N2O_Committee_WP2/FluxProcessingChain.ipynb)"
+    "- <b>UPDATED</b> [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
+    "- <b>NEW!</b> [Quick Flux Processing Chain](FluxProcessingChain/QuickFluxProcessingChain.ipynb): quickly run a simplified version of the flux processing chain\n",
+    "- [See here for an example using N2O flux](Workbench/FLUXNET_CH4-N2O_Committee_WP2/FluxProcessingChain.ipynb) (older version of the flux processing chain)"
    ]
   },
   {
