Updated filetype naming

--- a/notebooks/FluxProcessingChain/QuickFluxProcessingChain.ipynb
+++ b/notebooks/FluxProcessingChain/QuickFluxProcessingChain.ipynb
@@ -69,7 +69,7 @@
     "SOURCEDIRS = [r'L:\\Sync\\luhk_work\\CURRENT\\fru\\Level-1_results_fluxnet_2020-2022']  # Folders where the EddyPro output files are located\n",
     "SITE_LAT = 47.115833  # Latitude of site\n",
     "SITE_LON = 8.537778  # Longitude of site\n",
-    "FILETYPE = 'EDDYPRO_FLUXNET_30MIN'  # Filetype of EddyPro output files, can be 'EDDYPRO_FLUXNET_30MIN' or 'EDDYPRO_FULL_OUTPUT_30MIN'\n",
+    "FILETYPE = 'EDDYPRO-FLUXNET-30MIN'  # Filetype of EddyPro output files, can be 'EDDYPRO-FLUXNET-30MIN' or 'EDDYPRO-FULL-OUTPUT-30MIN'\n",
     "UTC_OFFSET = 1  # Time stamp offset in relation to UTC, e.g. 1 for UTC+01:00 (CET), important for the calculation of potential radiation for detecting daytime and nighttime\n",
     "NIGHTTIME_THRESHOLD = 50  # Threshold for potential radiation in W m-2, conditions below threshold are nighttime\n",
     "DAYTIME_ACCEPT_QCF_BELOW = 2\n",
