--- a/notebooks/Formats/LoadSaveParquetFile.ipynb
+++ b/notebooks/Formats/LoadSaveParquetFile.ipynb
@@ -593,7 +593,7 @@
     }
    ],
    "source": [
-    "loaddatafile = MultiDataFileReader(filetype='REDDYPROC_30MIN', filepaths=filepaths)\n",
+    "loaddatafile = MultiDataFileReader(filetype='REDDYPROC-30MIN', filepaths=filepaths)\n",
     "df = loaddatafile.data_df"
    ]
   },
