--- a/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "loaddatafile = MultiDataFileReader(filetype='ICOS_H1R_CSVZIP_1MIN', filepaths=filepaths)"
+    "loaddatafile = MultiDataFileReader(filetype='ICOS-H1R-CSVZIP-1MIN', filepaths=filepaths)"
    ]
   },
   {
