--- a/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb
@@ -409,7 +409,7 @@
     }
    ],
    "source": [
-    "loaddatafile = MultiDataFileReader(filetype='ICOS_H2R_CSVZIP_10S', filepaths=filepaths)"
+    "loaddatafile = MultiDataFileReader(filetype='ICOS-H2R-CSVZIP-10S', filepaths=filepaths)"
    ]
   },
   {
