--- a/notebooks/ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb
@@ -887,7 +887,7 @@
    ],
    "source": [
     "FILE = r\"L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\CH-Dav_BM_20230328_L02_F03.zip\"\n",
-    "rft = ReadFileType(filepath=FILE, filetype='ICOS_H2R_CSVZIP_10S', output_middle_timestamp=True)"
+    "rft = ReadFileType(filepath=FILE, filetype='ICOS-H2R-CSVZIP-10S', output_middle_timestamp=True)"
    ]
   },
   {
