--- a/notebooks/Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb
+++ b/notebooks/Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "uploaded = MultiDataFileReader(filetype='ICOS_H1R_CSVZIP_1MIN', filepaths=filepaths_uploaded)"
+    "uploaded = MultiDataFileReader(filetype='ICOS-H1R-CSVZIP-1MIN', filepaths=filepaths_uploaded)"
    ]
   },
   {
@@ -881,7 +881,7 @@
     }
    ],
    "source": [
-    "local = MultiDataFileReader(filetype='ICOS_H1R_CSVZIP_1MIN', filepaths=filepaths_local)"
+    "local = MultiDataFileReader(filetype='ICOS-H1R-CSVZIP-1MIN', filepaths=filepaths_local)"
    ]
   },
   {
