Added notebook for daily correlation function

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 9 Jan 2024  \n",
+    "**Last updated:**: 18 Mar 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -44,8 +44,7 @@
    "id": "46045ed1-9cdc-4e41-bde9-69bf9e41ebf4",
    "metadata": {},
    "source": [
-    "# **Analyses**\n",
-    "Examples for data analyses"
+    "# **Analyses**"
    ]
   },
   {
@@ -53,7 +52,9 @@
    "id": "8bee8460-ffc1-43e7-b3d9-99c63be7e07b",
    "metadata": {},
    "source": [
-    "- [Find gaps in time series](Analyses/GapFinder.ipynb)"
+    "- [Daily correlation between two time series](Analyses/DailyCorrelation.ipynb)\n",
+    "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
+    "- [Histogram calculation](Analyses/Histogram.ipynb)"
    ]
   },
   {
