Refactored sorting bins decoupling

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -53,6 +53,7 @@
    "metadata": {},
    "source": [
     "- [Daily correlation between two time series](Analyses/DailyCorrelation.ipynb)\n",
+    "- [Decoupling: Sorting bins method](Analyses/DailyCorrelation.ipynb)\n",
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)"
    ]
