Refactored long-term anomalies plot

--- a/notebooks/Analyses/DecouplingSortingBins.ipynb
+++ b/notebooks/Analyses/DecouplingSortingBins.ipynb
@@ -313,7 +313,7 @@
    "id": "df38fda9-066a-4fef-986a-cfe921fb88c0",
    "metadata": {},
    "source": [
-    "# (1) **Calculate daily correlation between `Rg_f` and `SW_IN_POT`**"
+    "# **Calculate bin medians**"
    ]
   },
   {
