--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 19 Mar 2024  \n",
+    "**Last updated:**: 20 Mar 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -237,6 +237,7 @@
    "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
+    "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
   },
