--- a/notebooks/Analyses/DecouplingSortingBins.ipynb
+++ b/notebooks/Analyses/DecouplingSortingBins.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.71.3\n"
+      "diive version: v0.71.4\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.055 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.092 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
      ]
     },
     {
@@ -369,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binmedians = sbm.get_binmeans()"
+    "binmedians = sbm.get_binmedians()"
    ]
   },
   {
@@ -530,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-03-19 17:06:54\n"
+      "Finished 2024-03-19 23:56:08\n"
      ]
     }
    ],
