Update percentile calcs

--- a/notebooks/Analyses/Percentiles.ipynb
+++ b/notebooks/Analyses/Percentiles.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `1` (21 Mar 2024)  \n",
+    "**Notebook version**: `1` (23 Mar 2024)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
    ]
   },
@@ -52,6 +52,7 @@
    "metadata": {},
    "source": [
     "- Simple function to calculate percentiles for input series.\n",
+    "- Does not convert all values to their percentile rank, but instead outputs percentiles 0, 1, 2, 3, ... 98, 99, 100, i.e., in total 101 values.\n",
     "- In this example, the percentiles of half-hourly air temperature data (2013-2022) are calculated."
    ]
   },
@@ -81,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.71.5\n"
+      "diive version: v0.71.6\n"
      ]
     }
    ],
@@ -92,7 +93,7 @@
     "import warnings\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
     "from diive.configs.exampledata import load_exampledata_parquet\n",
-    "from diive.pkgs.analyses.quantiles import percentiles\n",
+    "from diive.pkgs.analyses.quantiles import percentiles101\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
     "print(f\"diive version: v{version_diive}\")"
    ]
@@ -107,10 +108,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function percentiles in module diive.pkgs.analyses.quantiles:\n",
+      "Help on function percentiles101 in module diive.pkgs.analyses.quantiles:\n",
       "\n",
-      "percentiles(series: pandas.core.series.Series, showplot: bool = True, verbose: bool = True) -> pandas.core.frame.DataFrame\n",
-      "    Show percentiles 0-100 for series.\n",
+      "percentiles101(series: pandas.core.series.Series, showplot: bool = True, verbose: bool = True) -> pandas.core.frame.DataFrame\n",
+      "    Calculate percentiles 0-100 for series.\n",
       "    \n",
       "    Args:\n",
       "        series: Input series.\n",
@@ -119,12 +120,15 @@
       "    \n",
       "    Returns:\n",
       "        Dataframe with percentiles 0-100 for *series*.\n",
+      "    \n",
+      "    - Example notebook available in:\n",
+      "        notebooks/Analyses/Percentiles.ipynb\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "help(percentiles)"
+    "help(percentiles101)"
    ]
   },
   {
@@ -153,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.095 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.317 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
      ]
     },
     {
@@ -259,7 +263,7 @@
     }
    ],
    "source": [
-    "percentiles_df = percentiles(series=df['Tair_f'], showplot=True, verbose=True)"
+    "percentiles_df = percentiles101(series=df['Tair_f'], showplot=True, verbose=True)"
    ]
   },
   {
@@ -410,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-03-20 22:50:25\n"
+      "Finished 2024-03-22 15:08:05\n"
      ]
     }
    ],
