--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -56,7 +56,8 @@
     "- [Decoupling: Sorting bins method](Analyses/DecouplingSortingBins.ipynb)\n",
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)\n",
-    "- [Percentiles](Analyses/Percentiles.ipynb)"
+    "- [Percentiles](Analyses/Percentiles.ipynb)\n",
+    "- [z-aggregates in quantiles (classes) of x and y](Analyses/CalculateZaggregatesInQuantileClassesOfXY.ipynb)"
    ]
   },
   {
