Added heatmap notebooks

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -240,7 +240,8 @@
    "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
-    "- [Heatmap showing values of time series as date vs time](Plotting/HeatmapDateTime.ipynb)\n",
+    "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
+    "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
