Notebook updates and checks

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 25 Mar 2024  \n",
+    "**Last updated:**: 21 Apr 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -161,8 +161,8 @@
    "id": "e3344d3b-0d72-4915-a84e-45b5eec3c7b6",
    "metadata": {},
    "source": [
-    "- <b>UPDATED</b> [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
-    "- <b>NEW!</b> [Quick Flux Processing Chain](FluxProcessingChain/QuickFluxProcessingChain.ipynb): quickly run a simplified version of the flux processing chain\n",
+    "- [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
+    "- [Quick Flux Processing Chain](FluxProcessingChain/QuickFluxProcessingChain.ipynb): quickly run a simplified version of the flux processing chain\n",
     "- [See here for an example using N2O flux](Workbench/FLUXNET_CH4-N2O_Committee_WP2/FluxProcessingChain.ipynb) (older version of the flux processing chain)"
    ]
   },
@@ -243,6 +243,7 @@
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
+    "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
   },
@@ -268,9 +269,9 @@
    "id": "f1fbedcb-ac0f-4065-b976-2073161d9d4c",
    "metadata": {},
    "source": [
-    "- [Read data from multiple ICOS BM files with 1-row header](ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb)\n",
-    "- [Read data from multiple ICOS BM files with 2-row header](ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb)\n",
-    "- [Read data from single ICOS BM file with 2-row header](ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb)"
+    "- <b>NEW!</b> [Read single EddyPro _fluxnet_ output file with DataFileReader using parameters](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_DataFileReader.ipynb)\n",
+    "- <b>NEW!</b> [Read single EddyPro _fluxnet_ output file with ReadFileType using pre-defined filetype](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_ReadFileType.ipynb)\n",
+    "- <b>NEW!</b> [Read multiple EddyPro _fluxnet_ output file with MultiDataFileReader using pre-defined filetype](ReadFiles/Read_multiple_EddyPro_fluxnet_output_files_with_MultiDataFileReader.ipynb)"
    ]
   },
   {
