--- a/notebooks/Stats/TimeSeriesStats.ipynb
+++ b/notebooks/Stats/TimeSeriesStats.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
     "ExecuteTime": {
@@ -49,10 +49,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diive version: v0.74.0\n"
+     ]
+    }
+   ],
    "source": [
+    "import importlib.metadata\n",
+    "from datetime import datetime\n",
     "from diive.configs.exampledata import load_exampledata_parquet\n",
-    "from diive.core.dfun.stats import sstats"
+    "from diive.core.dfun.stats import sstats\n",
+    "version_diive = importlib.metadata.version(\"diive\")\n",
+    "print(f\"diive version: v{version_diive}\")"
    ]
   },
   {
@@ -65,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
     "ExecuteTime": {
@@ -79,28 +91,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.049 seconds). Detected time resolution of <30 * Minutes> / 30T \n"
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.056 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "TIMESTAMP_MIDDLE\n",
-       "2013-01-01 00:15:00         NaN\n",
-       "2013-01-01 00:45:00         NaN\n",
-       "2013-01-01 01:15:00         NaN\n",
-       "2013-01-01 01:45:00    0.537565\n",
-       "2013-01-01 02:15:00         NaN\n",
-       "                         ...   \n",
-       "2022-12-31 21:45:00         NaN\n",
-       "2022-12-31 22:15:00    3.517950\n",
-       "2022-12-31 22:45:00         NaN\n",
-       "2022-12-31 23:15:00         NaN\n",
-       "2022-12-31 23:45:00         NaN\n",
-       "Freq: 30T, Name: NEE_CUT_REF_orig, Length: 175296, dtype: float64"
+       "2013-01-01 00:15:00      NaN\n",
+       "2013-01-01 00:45:00      NaN\n",
+       "2013-01-01 01:15:00      NaN\n",
+       "2013-01-01 01:45:00    0.538\n",
+       "2013-01-01 02:15:00      NaN\n",
+       "                       ...  \n",
+       "2022-12-31 21:45:00      NaN\n",
+       "2022-12-31 22:15:00    3.518\n",
+       "2022-12-31 22:45:00      NaN\n",
+       "2022-12-31 23:15:00      NaN\n",
+       "2022-12-31 23:45:00      NaN\n",
+       "Freq: 30min, Name: NEE_CUT_REF_orig, Length: 175296, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "0783bda1-e410-42f0-a4c6-be64000852e9",
    "metadata": {
     "ExecuteTime": {
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c90d528e-9415-46d4-9eea-030c265e65f3",
    "metadata": {
     "ExecuteTime": {
@@ -206,7 +218,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MEAN</th>\n",
-       "      <td>-3.653026</td>\n",
+       "      <td>-3.653027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SD</th>\n",
@@ -214,51 +226,51 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VAR</th>\n",
-       "      <td>39.056725</td>\n",
+       "      <td>39.05672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SD/MEAN</th>\n",
-       "      <td>-1.710784</td>\n",
+       "      <td>-1.710783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SUM</th>\n",
-       "      <td>-212595.178903</td>\n",
+       "      <td>-212595.211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MEDIAN</th>\n",
-       "      <td>-3.18039</td>\n",
+       "      <td>-3.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MIN</th>\n",
-       "      <td>-40.81112</td>\n",
+       "      <td>-40.811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MAX</th>\n",
-       "      <td>25.290227</td>\n",
+       "      <td>25.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P01</th>\n",
-       "      <td>-20.550344</td>\n",
+       "      <td>-20.5502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P05</th>\n",
-       "      <td>-14.229386</td>\n",
+       "      <td>-14.229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P25</th>\n",
-       "      <td>-7.556164</td>\n",
+       "      <td>-7.556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P75</th>\n",
-       "      <td>0.630461</td>\n",
+       "      <td>0.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P95</th>\n",
-       "      <td>5.510475</td>\n",
+       "      <td>5.5102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P99</th>\n",
-       "      <td>10.946673</td>\n",
+       "      <td>10.9462</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -272,23 +284,23 @@
        "NOV                        58197\n",
        "MISSING                   117099\n",
        "MISSING_PERC           66.800726\n",
-       "MEAN                   -3.653026\n",
+       "MEAN                   -3.653027\n",
        "SD                      6.249538\n",
-       "VAR                    39.056725\n",
-       "SD/MEAN                -1.710784\n",
-       "SUM               -212595.178903\n",
-       "MEDIAN                  -3.18039\n",
-       "MIN                    -40.81112\n",
-       "MAX                    25.290227\n",
-       "P01                   -20.550344\n",
-       "P05                   -14.229386\n",
-       "P25                    -7.556164\n",
-       "P75                     0.630461\n",
-       "P95                     5.510475\n",
-       "P99                    10.946673"
+       "VAR                     39.05672\n",
+       "SD/MEAN                -1.710783\n",
+       "SUM                  -212595.211\n",
+       "MEDIAN                     -3.18\n",
+       "MIN                      -40.811\n",
+       "MAX                        25.29\n",
+       "P01                     -20.5502\n",
+       "P05                      -14.229\n",
+       "P25                       -7.556\n",
+       "P75                         0.63\n",
+       "P95                       5.5102\n",
+       "P99                      10.9462"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "52d47c35-eda2-4bb5-9b2b-1faedb4fb43c",
    "metadata": {
     "ExecuteTime": {
@@ -323,20 +335,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2023-10-25 14:55:39\n"
+      "Finished 2024-04-20 14:40:31\n"
      ]
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "print(f\"Finished {dt_string}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b9900f7d-1bd3-4aa3-bd9a-33a8e3557678",
    "metadata": {
     "ExecuteTime": {
