--- a/notebooks/Analyses/Histogram.ipynb
+++ b/notebooks/Analyses/Histogram.ipynb
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.71.2\n"
+      "diive version: v0.74.0\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "import importlib.metadata\n",
     "from datetime import datetime\n",
     "from diive.pkgs.analyses.histogram import Histogram\n",
-    "from diive.configs.exampledata import load_exampledata_eddypro_fluxnet_CSV_30MIN  # Example data\n",
+    "from diive.configs.exampledata import load_exampledata_EDDYPRO_FLUXNET_CSV_30MIN  # Example data\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
     "print(f\"diive version: v{version_diive}\")"
    ]
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file exampledata_CH-AWS_2022.07_FR-20220127-164245_eddypro_fluxnet_2022-01-28T112538_adv.csv ...\n"
+      "Reading file exampledata_EDDYPRO-FLUXNET-CSV-30MIN_CH-AWS_2022.07_FR-20220127-164245_eddypro_fluxnet_2022-01-28T112538_adv.csv ...\n"
      ]
     },
     {
@@ -156,25 +156,7 @@
        "      <th>FILENAME_HF</th>\n",
        "      <th>SW_IN_POT</th>\n",
        "      <th>NIGHT</th>\n",
-       "      <th>EXPECT_NR</th>\n",
-       "      <th>FILE_NR</th>\n",
-       "      <th>CUSTOM_FILTER_NR</th>\n",
-       "      <th>WD_FILTER_NR</th>\n",
-       "      <th>SONIC_NR</th>\n",
-       "      <th>T_SONIC_NR</th>\n",
-       "      <th>CO2_NR</th>\n",
-       "      <th>H2O_NR</th>\n",
-       "      <th>CH4_NR</th>\n",
        "      <th>...</th>\n",
-       "      <th>CUSTOM_STATUS_CODE_IRGA72_MEAN</th>\n",
-       "      <th>CUSTOM_GA_DIAG_CODE_IRGA72_MEAN</th>\n",
-       "      <th>CUSTOM_SIGNAL_STRENGTH_IRGA72_MEAN</th>\n",
-       "      <th>CUSTOM_H2O_MEAN</th>\n",
-       "      <th>CUSTOM_CO2_MEAN</th>\n",
-       "      <th>CUSTOM_AIR_P_MEAN</th>\n",
-       "      <th>CUSTOM_COOLER_V_MEAN</th>\n",
-       "      <th>CUSTOM_FLOWRATE_MEAN</th>\n",
-       "      <th>NUM_BIOMET_VARS</th>\n",
        "      <th>LW_IN_1_1_1</th>\n",
        "      <th>PA_1_1_1</th>\n",
        "      <th>PPFD_IN_1_1_1</th>\n",
@@ -197,54 +179,18 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2021-07-01 00:15:00</th>\n",
-       "      <td>202107010000</td>\n",
+       "      <td>2.021070e+11</td>\n",
        "      <td>182.000</td>\n",
        "      <td>182.021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8191.0</td>\n",
-       "      <td>100.05</td>\n",
-       "      <td>340.582</td>\n",
-       "      <td>14.2538</td>\n",
-       "      <td>80198.2</td>\n",
-       "      <td>1.91066</td>\n",
-       "      <td>0.000259</td>\n",
-       "      <td>6</td>\n",
        "      <td>329.076</td>\n",
        "      <td>80.1982</td>\n",
        "      <td>0.0</td>\n",
@@ -254,31 +200,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-07-01 00:45:00</th>\n",
-       "      <td>202107010030</td>\n",
+       "      <td>2.021070e+11</td>\n",
        "      <td>182.021</td>\n",
        "      <td>182.042</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8191.0</td>\n",
-       "      <td>100.05</td>\n",
-       "      <td>344.452</td>\n",
-       "      <td>14.1511</td>\n",
-       "      <td>80203.3</td>\n",
-       "      <td>1.91007</td>\n",
-       "      <td>0.000259</td>\n",
-       "      <td>6</td>\n",
        "      <td>340.771</td>\n",
        "      <td>80.2033</td>\n",
        "      <td>0.0</td>\n",
@@ -288,31 +216,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-07-01 01:15:00</th>\n",
-       "      <td>202107010100</td>\n",
+       "      <td>2.021070e+11</td>\n",
        "      <td>182.042</td>\n",
        "      <td>182.062</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8191.0</td>\n",
-       "      <td>100.05</td>\n",
-       "      <td>343.712</td>\n",
-       "      <td>14.1364</td>\n",
-       "      <td>80210.6</td>\n",
-       "      <td>1.90857</td>\n",
-       "      <td>0.000259</td>\n",
-       "      <td>6</td>\n",
        "      <td>341.942</td>\n",
        "      <td>80.2106</td>\n",
        "      <td>0.0</td>\n",
@@ -322,31 +232,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-07-01 01:45:00</th>\n",
-       "      <td>202107010130</td>\n",
+       "      <td>2.021070e+11</td>\n",
        "      <td>182.062</td>\n",
        "      <td>182.083</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8191.0</td>\n",
-       "      <td>100.05</td>\n",
-       "      <td>342.139</td>\n",
-       "      <td>14.1158</td>\n",
-       "      <td>80206.5</td>\n",
-       "      <td>1.90679</td>\n",
-       "      <td>0.000259</td>\n",
-       "      <td>6</td>\n",
        "      <td>349.003</td>\n",
        "      <td>80.2064</td>\n",
        "      <td>0.0</td>\n",
@@ -356,31 +248,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-07-01 02:15:00</th>\n",
-       "      <td>202107010200</td>\n",
+       "      <td>2.021070e+11</td>\n",
        "      <td>182.083</td>\n",
        "      <td>182.104</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>36000</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8191.0</td>\n",
-       "      <td>100.05</td>\n",
-       "      <td>343.733</td>\n",
-       "      <td>14.1260</td>\n",
-       "      <td>80192.1</td>\n",
-       "      <td>1.90773</td>\n",
-       "      <td>0.000259</td>\n",
-       "      <td>6</td>\n",
        "      <td>346.874</td>\n",
        "      <td>80.1922</td>\n",
        "      <td>0.0</td>\n",
@@ -394,13 +268,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                     TIMESTAMP_START  DOY_START  DOY_END  FILENAME_HF  SW_IN_POT  NIGHT  EXPECT_NR  FILE_NR  CUSTOM_FILTER_NR  WD_FILTER_NR  SONIC_NR  T_SONIC_NR   CO2_NR   H2O_NR  CH4_NR  ...  CUSTOM_STATUS_CODE_IRGA72_MEAN  CUSTOM_GA_DIAG_CODE_IRGA72_MEAN  CUSTOM_SIGNAL_STRENGTH_IRGA72_MEAN  CUSTOM_H2O_MEAN  CUSTOM_CO2_MEAN  CUSTOM_AIR_P_MEAN  CUSTOM_COOLER_V_MEAN  CUSTOM_FLOWRATE_MEAN  NUM_BIOMET_VARS  LW_IN_1_1_1  PA_1_1_1  PPFD_IN_1_1_1  RH_1_1_1  SW_IN_1_1_1  TA_1_1_1\n",
-       "TIMESTAMP_MIDDLE                                                                                                                                                                             ...                                                                                                                                                                                                                                                                                              \n",
-       "2021-07-01 00:15:00     202107010000    182.000  182.021          NaN        0.0      1      36000    36000             36000         36000     36000       36000  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          340.582          14.2538            80198.2               1.91066              0.000259                6      329.076   80.1982            0.0  100.0000          0.0   5.55880\n",
-       "2021-07-01 00:45:00     202107010030    182.021  182.042          NaN        0.0      1      36000    36000             36000         36000     36000       36000  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          344.452          14.1511            80203.3               1.91007              0.000259                6      340.771   80.2033            0.0  100.0000          0.0   5.59079\n",
-       "2021-07-01 01:15:00     202107010100    182.042  182.062          NaN        0.0      1      36000    36000             36000         36000     36000       36000  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          343.712          14.1364            80210.6               1.90857              0.000259                6      341.942   80.2106            0.0   99.8620          0.0   5.58350\n",
-       "2021-07-01 01:45:00     202107010130    182.062  182.083          NaN        0.0      1      36000    36000             36000         36000     36000       36000  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          342.139          14.1158            80206.5               1.90679              0.000259                6      349.003   80.2064            0.0   99.3662          0.0   5.55140\n",
-       "2021-07-01 02:15:00     202107010200    182.083  182.104          NaN        0.0      1      36000    36000             36000         36000     36000       36000  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          343.733          14.1260            80192.1               1.90773              0.000259                6      346.874   80.1922            0.0   99.9380          0.0   5.59066\n",
+       "                     TIMESTAMP_START  DOY_START  DOY_END  FILENAME_HF  SW_IN_POT  NIGHT  ...  LW_IN_1_1_1  PA_1_1_1  PPFD_IN_1_1_1  RH_1_1_1  SW_IN_1_1_1  TA_1_1_1\n",
+       "TIMESTAMP_MIDDLE                                                                         ...                                                                       \n",
+       "2021-07-01 00:15:00     2.021070e+11    182.000  182.021          NaN        0.0    1.0  ...      329.076   80.1982            0.0  100.0000          0.0   5.55880\n",
+       "2021-07-01 00:45:00     2.021070e+11    182.021  182.042          NaN        0.0    1.0  ...      340.771   80.2033            0.0  100.0000          0.0   5.59079\n",
+       "2021-07-01 01:15:00     2.021070e+11    182.042  182.062          NaN        0.0    1.0  ...      341.942   80.2106            0.0   99.8620          0.0   5.58350\n",
+       "2021-07-01 01:45:00     2.021070e+11    182.062  182.083          NaN        0.0    1.0  ...      349.003   80.2064            0.0   99.3662          0.0   5.55140\n",
+       "2021-07-01 02:15:00     2.021070e+11    182.083  182.104          NaN        0.0    1.0  ...      346.874   80.1922            0.0   99.9380          0.0   5.59066\n",
        "\n",
        "[5 rows x 488 columns]"
       ]
@@ -411,7 +285,7 @@
     }
    ],
    "source": [
-    "data_df, metadata_df = load_exampledata_eddypro_fluxnet_CSV_30MIN()\n",
+    "data_df, metadata_df = load_exampledata_EDDYPRO_FLUXNET_CSV_30MIN()\n",
     "data_df.head()"
    ]
   },
@@ -437,7 +311,7 @@
        "2021-07-01 01:15:00    1.30\n",
        "2021-07-01 01:45:00    1.20\n",
        "2021-07-01 02:15:00    1.30\n",
-       "Freq: 30T, Name: CO2_TLAG_ACTUAL, dtype: float64"
+       "Freq: 30min, Name: CO2_TLAG_ACTUAL, dtype: float64"
       ]
      },
      "execution_count": 3,
@@ -544,7 +418,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>747</td>\n",
+       "      <td>746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -589,7 +463,7 @@
        "   BIN_START_INCL  COUNTS\n",
        "0             0.0      10\n",
        "1             0.5       2\n",
-       "2             1.0     747\n",
+       "2             1.0     746\n",
        "3             1.5       3\n",
        "4             2.0       1\n",
        "5             2.5       0\n",
@@ -712,7 +586,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>747</td>\n",
+       "      <td>746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -746,7 +620,7 @@
       "text/plain": [
        "   BIN_START_INCL  COUNTS\n",
        "0             0.5       2\n",
-       "1             1.0     747\n",
+       "1             1.0     746\n",
        "2             1.5       3\n",
        "3             2.0       1\n",
        "4             2.5       0\n",
@@ -901,7 +775,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1.20</td>\n",
-       "      <td>29</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1047,7 +921,7 @@
        "5             1.05       3\n",
        "6             1.10       4\n",
        "7             1.15       8\n",
-       "8             1.20      29\n",
+       "8             1.20      28\n",
        "9             1.25     245\n",
        "10            1.30     398\n",
        "11            1.35      55\n",
@@ -1182,7 +1056,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.20</td>\n",
-       "      <td>29</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1220,7 +1094,7 @@
       ],
       "text/plain": [
        "   BIN_START_INCL  COUNTS\n",
-       "0            1.20      29\n",
+       "0            1.20      28\n",
        "1            1.25     245\n",
        "2            1.30     398\n",
        "3            1.35      55\n",
@@ -1300,7 +1174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-03-16 00:05:14\n"
+      "Finished 2024-04-21 10:23:32\n"
      ]
     }
    ],
