Added test and notebook, day/nighttime absolute limits

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -240,7 +240,18 @@
    "id": "d82f88e5-2345-492c-a0c6-50211375783f",
    "metadata": {},
    "source": [
-    "- [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)"
+    "## Multiple tests combined\n",
+    "- *SOON* Step-wise outlier detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7ca8e7f-d991-4fe2-ac2c-e259c72246f7",
+   "metadata": {},
+   "source": [
+    "## Single tests\n",
+    "- <b>NEW!</b> [Absolute limits, separately for daytime and nighttime](OutlierDetection/AbsoluteLimitsDaytimeNighttime.ipynb)\n",
+    "- <b>NEW!</b> [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)"
    ]
   },
   {
