Updated XGBoost, some fixes

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -189,7 +189,8 @@
    "id": "ec0b4ba4-f35a-4e3c-988e-83b79b70fec7",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [Gap-filling with XGBoost](GapFilling/XGBoostGapFilling.ipynb)\n",
+    "- <b>NEW!</b> [Gap-filling with XGBoost, minimal example](GapFilling/XGBoostGapFillingMinimal.ipynb)\n",
+    "- <b>NEW!</b> [Gap-filling with XGBoost, more extensive example](GapFilling/XGBoostGapFillingExtensive.ipynb)\n",
     "- [Gap-filling with random forest](GapFilling/RandomForestGapFilling.ipynb)\n",
     "- [Linear interpolation](GapFilling/LinearInterpolation.ipynb)\n",
     "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
