Added diel cycle notebooks

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 25 Apr 2024  \n",
+    "**Last updated:**: 14 May 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -253,8 +253,8 @@
    "metadata": {},
    "source": [
     "## Single tests\n",
-    "- <b>NEW!</b> [Absolute limits, separately for daytime and nighttime](OutlierDetection/AbsoluteLimitsDaytimeNighttime.ipynb)\n",
-    "- <b>NEW!</b> [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)"
+    "- [Absolute limits, separately for daytime and nighttime](OutlierDetection/AbsoluteLimitsDaytimeNighttime.ipynb)\n",
+    "- [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)"
    ]
   },
   {
@@ -278,6 +278,7 @@
    "id": "3f12e3ac-15eb-4dcb-bbbc-4652149b25d9",
    "metadata": {},
    "source": [
+    "- <b>NEW!</b> [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
@@ -307,14 +308,39 @@
    "id": "f1fbedcb-ac0f-4065-b976-2073161d9d4c",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [Read single EddyPro _fluxnet_ output file with DataFileReader using parameters](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_DataFileReader.ipynb)\n",
-    "- <b>NEW!</b> [Read single EddyPro _fluxnet_ output file with ReadFileType using pre-defined filetype](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_ReadFileType.ipynb)\n",
-    "- <b>NEW!</b> [Read multiple EddyPro _fluxnet_ output file with MultiDataFileReader using pre-defined filetype](ReadFiles/Read_multiple_EddyPro_fluxnet_output_files_with_MultiDataFileReader.ipynb)"
+    "- [Read single EddyPro _fluxnet_ output file with DataFileReader using parameters](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_DataFileReader.ipynb)\n",
+    "- [Read single EddyPro _fluxnet_ output file with ReadFileType using pre-defined filetype](ReadFiles/Read_single_EddyPro_fluxnet_output_file_with_ReadFileType.ipynb)\n",
+    "- [Read multiple EddyPro _fluxnet_ output file with MultiDataFileReader using pre-defined filetype](ReadFiles/Read_multiple_EddyPro_fluxnet_output_files_with_MultiDataFileReader.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "808f0e8c-c40c-4513-88e9-14e1828df9de",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05993e55-79da-4d27-b686-84f1dedbdaac",
+   "metadata": {},
+   "source": [
+    "# **Resampling**\n",
+    "Examples for resampling data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58392ffb-964e-4d72-b3fe-74023e6a4ca5",
+   "metadata": {},
+   "source": [
+    "- <b>NEW!</b> [Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb) (for plotting diel cycles see Plotting/[Diel cycle per month](Plotting/DielCycle.ipynb))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c8a70ba-dd44-49e8-b3ef-74922b4d7741",
    "metadata": {},
    "source": [
     "</br>"
