Added notebook and test case lof all data

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 17 May 2024  \n",
+    "**Last updated:**: 20 May 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -256,6 +256,7 @@
     "- [Absolute limits, separately for daytime and nighttime](OutlierDetection/AbsoluteLimitsDaytimeNighttime.ipynb)\n",
     "- [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)\n",
     "- <b>NEW!</b> [Incremental z-score: Identify outliers based on the z-score of double increments](OutlierDetection/zScoreIncremental.ipynb)\n",
+    "- <b>NEW!</b> [Local outlier factor across all data](OutlierDetection/LocalOutlierFactorAllData.ipynb)\n",
     "- <b>NEW!</b> [Local standard deviation](OutlierDetection/LocalSD.ipynb)"
    ]
   },
