Added Hampel filter notebooks

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 9 Aug 2024  \n",
+    "**Last updated:**: 17 Aug 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -258,7 +258,9 @@
     "- [Incremental z-score: Identify outliers based on the z-score of double increments](OutlierDetection/zScoreIncremental.ipynb)\n",
     "- [Local outlier factor across all data](OutlierDetection/LocalOutlierFactorAllData.ipynb)\n",
     "- [Local standard deviation](OutlierDetection/LocalSD.ipynb)\n",
-    "- <b>NEW!</b> [z-score](OutlierDetection/zScore.ipynb)\n",
+    "- <b>NEW!</b> [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
+    "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
+    "- <b>NEW!</b> [z-score](OutlierDetection/zScore.ipynb) \n",
     "- <b>NEW!</b> [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)"
    ]
   },
