Added trimming notebook

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 17 Aug 2024  \n",
+    "**Last updated:**: 18 Aug 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -260,6 +260,7 @@
     "- [Local standard deviation](OutlierDetection/LocalSD.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
+    "- <b>NEW!</b> [Trim data](OutlierDetection/TrimLow.ipynb)\n",
     "- <b>NEW!</b> [z-score](OutlierDetection/zScore.ipynb) \n",
     "- <b>NEW!</b> [z-score separately on daytime and nighttime data](OutlierDetection/zScoreDaytimeNighttime.ipynb)"
    ]
