--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated:**: 18 Aug 2024  \n",
+    "**Last updated:**: 20 Aug 2024  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -289,6 +289,7 @@
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
+    "- <b>NEW!</b> [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
