--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -257,6 +257,7 @@
     "- [Absolute limits](OutlierDetection/AbsoluteLimits.ipynb)\n",
     "- [Incremental z-score: Identify outliers based on the z-score of double increments](OutlierDetection/zScoreIncremental.ipynb)\n",
     "- [Local outlier factor across all data](OutlierDetection/LocalOutlierFactorAllData.ipynb)\n",
+    "- <b>NEW!</b> [Local outlier factor across, separately for daytime and nighttime](OutlierDetection/LocalOutlierFactorDaytimeNighttime.ipynb)\n",
     "- [Local standard deviation](OutlierDetection/LocalSD.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
