Added notebook for manual removal

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -259,6 +259,7 @@
     "- [Local outlier factor across all data](OutlierDetection/LocalOutlierFactorAllData.ipynb)\n",
     "- <b>NEW!</b> [Local outlier factor across, separately for daytime and nighttime](OutlierDetection/LocalOutlierFactorDaytimeNighttime.ipynb)\n",
     "- [Local standard deviation](OutlierDetection/LocalSD.ipynb)\n",
+    "- <b>NEW!</b> [Manual removal of time periods (from-to) or single records from time series](OutlierDetection/ManualRemoval.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter](OutlierDetection/Hampel.ipynb)\n",
     "- <b>NEW!</b> [Hampel filter separately for daytime and nighttime data](OutlierDetection/HampelDaytimeNighttime.ipynb)\n",
     "- <b>NEW!</b> [Trim data](OutlierDetection/TrimLow.ipynb)\n",
